# AeroRhythmPOC

./: .gitignore  aerorhythm.db  main.py  pyproject.toml
audit-output/20250922_142757/: summary.txt
backend/: aerorhythm.db  requirements.txt  test_api.py
backend/alembic/versions/: 001_chatbot_enhancements.py
backend/app/: config.py  crud.py  main.py  models.py  schemas.py
backend/app/core/: config.py  database.py  database_async.py  security.py
backend/app/crud/: async_crud.py  crud.py
backend/app/endpoints/: async_endpoints.py  auth.py  chat.py  crews.py  disruptions.py  explanations.py  flights.py  jobs.py  rosters.py
backend/app/models/: chatbot_models.py  models.py
backend/app/services/: auth_service.py  chat_service.py  (+8 more)
backend/inspiration/: fetch_and_index_regulations.py
backend/scripts/: create_database.py  generate_sample_data.py  init_db.py  sample_data.py  seed_basic_data.py  seed_chatbot_data.py  seed_comprehensive_data.py  simulations.py
backend/tests/: README.md  ai_stress_test_results.json  backend_test_results.json  comprehensive_test_report.json  database_test_results.json  frontend_test_results.json  run_all_tests.py  test_ai_stress.py  test_backend.py  test_database.py  test_disruptions.py  test_e2e.py  test_frontend.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  routes.tsx
scripts/: run_frontend_audit.sh
tests/: run_all_tests.py  test_ai_stress.py  test_backend.py  test_database.py  test_disruptions.py  test_e2e.py  test_frontend.py
(+27 files in other folders)
