[project]
name = "aero-rhythm-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "deap>=1.4.3",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "joblib>=1.5.2",
    "langchain>=0.3.27",
    "numpy>=2.3.3",
    "openai>=1.107.2",
    "pandas>=2.3.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pulp>=3.2.2",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
